# FoxholeChatTranslatorMod

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  benchmark_presets.csv  benchmark_results.csv  config.ini  inject_dumper7.ps1  install.bat  install.ps1  install_tts_voices.ps1  setup_tts.ps1  slang_dict.txt  term_protection.txt  toggle_mod.bat  translate_test.py  tts_readings.txt  tts_test.py  uninstall.bat  uninstall.ps1  version.def
.claude/memory/: feedback_overlay_textchanged.md  feedback_processevent_cache.md  feedback_tts_num_threads.md  feedback_worker_thread_priority.md
.github/: copilot-instructions.md
.github/workflows/: manual-release.yml  release.yml
docs/: benchmark-results.md  installer-pitfalls.md  project-notes.md  ue4-reversing-foxhole.md
src/: chat_message.h  config.cpp  config.h  dllmain.cpp  gnames.cpp  gnames.h  hooks.cpp  hooks.h  log.cpp  log.h  ollama.cpp  ollama.h  overlay.cpp  overlay.h  radio_icon.h  scanner.cpp  scanner.h  translate.cpp  translate.h  tts.cpp  tts.h  tts_install.cpp  tts_install.h  ue4.h  worker_main.cpp
test/: benchmark_ollama.ps1  benchmark_presets.ps1  overlay_test.cpp  sample_chat_log.txt  test_loader.cpp  translate_test.cpp
tools/: bench_lang_length.txt  bench_medium_only.py  bench_preset_comparison.txt  bench_quality_full.txt  bench_result.txt  bench_result_high.txt  bench_result_new.txt  bench_translate.py  bench_verify.py  benchmark_qwen.ps1  check_ollama.ps1  retranslate.py  test_term_protection.py  translate_test.py  tts_test.ps1  tts_test.py
